Fixed title spacing

--- a/stravandbota/index.css
+++ b/stravandbota/index.css
@@ -353,12 +353,16 @@ button:hover {
 /****************************************************************************************************************************************************************************************************************************/
 
 @media only screen and (max-width: 479px) {
-	.title {font-size: 56px}
 	button, button:focus {font-size: 22px}
 	.content * {font-size: 14px}
 	#rankS p, #rankB p {font-size: 17px !important}
 	.autoexec {font-size: 19px !important}
 	.cross {font-size: 13px}
+	
+	.title {
+		font-size: 56px;
+		margin: 8px 0 42px;
+	}
 	
 	.logo a img {
 		height: 133px;
